# TicTacToe

./: .gitignore  CMakeLists.txt  README.md
TicTacToe/: CMakeLists.txt  TicTacToe.cpp  TicTacToe.h  main.cpp
TicTacToe/GameManager/: GameManager.cpp  GameManager.h
TicTacToe/Player/: Player.h  RandomPlayer.cpp  RandomPlayer.h  SmartPlayer.cpp  SmartPlayer.h
TicTacToe/TicTacToe/: TicTacToe.cpp  TicTacToe.h
